Exc5/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: network-policy-ns
  labels:
    name: network-policy-ns
